uncomment some logs; cleanup reauth process to avoid unnecessary processing

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 TEST_POOL_ADDRESS="stratum+tcp://stratum.slushpool.com:3333"
 TEST_POOL_USER="lumrrin.workerName"
 TEST_POOL_PASSWORD="anything123"
-DEFAULT_POOL_ADDRESS="mining.dev.pool.titan.io:4242"
-DEFAULT_POOL_USER="lance.worker"
+DEFAULT_POOL_ADDRESS="mining.staging.pool.titan.io:4242"
+DEFAULT_POOL_USER="scott.worker"
+# DEFAULT_POOL_USER="lance.worker"
 DEFAULT_POOL_PASSWORD=""
